[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "changepointmodel"
version = "3.1.0a2"
description = "Energy changepoint modeling and related methodologies"
authors = [ "cunybpl <dev@cunybpl.org>",]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pydantic = "^1.8.2"
scikit-learn = "^1.2.1"
mypy = "^1.0.1"
black = "^23.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mypy = "^1.1.1"
[[tool.poetry.dev-dependencies.coverage]]
extras = [ "toml",]
version = "^6.0"
python = ">=3.6,<3.7"

[[tool.poetry.dev-dependencies.coverage]]
extras = [ "toml",]
version = ">=6.5"
python = ">=3.7"
