[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["cunybpl <dev@cunybpl.org>"]
description = "Energy changepoint modeling and related methodologies"
name = "changepointmodel"
version = "3.1.2"

[tool.poetry.dependencies]
pydantic = "^2.3"
python = ">=3.9, <3.12"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[[tool.poetry.dev-dependencies.coverage]]
extras = ["toml"]
python = ">=3.6,<3.7"
version = "^6.0"

[[tool.poetry.dev-dependencies.coverage]]
extras = ["toml"]
python = ">=3.7"
version = ">=6.5"
