[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["cunybpl <dev@cunybpl.org>"]
description = "Energy changepoint modeling and related methodologies"
name = "changepointmodel"
version = "3.4.0"

[tool.poetry.dependencies]
pydantic = "^2.7"
python = ">=3.10, <4"
scikit-learn = "^1.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = "^7.5.4"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-mock = "^3.14.0"
